work on terms of service, privacy, and security pages on the welcome website
Former-commit-id: 6a60891a69d5fa1653a4094ff96e99cadbd0b686 [formerly c422195321a48514bc959c10490be3f12fd3253f] [formerly c39f0ea7ae268b5b1da4afc962184c4a3f8a5957 [formerly 7b670a000f3ddf220ae91f3da4da9524ec65fca8]]
Former-commit-id: 0406b6acb8ce160a4ae77c233aac6de94e375a6f [formerly 846f714ee5e3e79a8abf5fbc7d0153c55d28ff8c]
Former-commit-id: 3004ded0dd49e2c8037952b0b679676082d9325a

--- a/templates/new_web_site/privacy-policy.html
+++ b/templates/new_web_site/privacy-policy.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <meta content="With just one click you can automatically add a new lead from LinkedIn to ioGrow. No need to spend time on data entry. Focus on what matters: serving your customers and closing more deals." name="description">
-    <meta content="ioGrow chrome extension - Smoothly integration with LinkedIn, Twitter and Gmail" property="og:title">
+    <meta content="ioGrow - Privacy Policy" property="og:title">
     <meta content="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" property="og:image">
     <meta content="With just one click you can automatically add a new lead from LinkedIn to ioGrow. No need to spend time on data entry. Focus on what matters: serving your customers and closing more deals." property="og:description">
     <title>
-      ioGrow chrome extension - Smoothly integration with LinkedIn, Twitter and Gmail
+      ioGrow - Privacy Policy
     </title>
     <script src="/static/new_web_site/google_drive_files/google.js">
 </script>
@@ -64,27 +64,36 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         <div class="icon icon-mobile-close toggle-nav-closed js-mobilenav-toggle-close" data-target-nav="mobile"></div>
       </div>
     </header>
-    <section class="section-intro" style="height: 560px; opacity: 1;">
-      <div class="content" style="margin-left: 309.5px !important;">
-        <div class="column column-left with-example">
-          <img alt="" class="example" src="http://storage.googleapis.com/iogrow-gs/chrome_extension.png">
-        </div>
-        <div class="column column-right with-copy">
-          <div class="copy text-left">
-            <h1 class="section-headline heading-headline allow-orphan">
-              ioGrow Chrome Extension
-            </h1>
-            <p>
-              Add Leads direclty from LinkedIn and Gmail.
-            </p>
-            
-            <div class="dropdown-wrapper">
-              <a class="maia-button button-download download-mobile get-started" href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni?utm_source=chrome-ntp-icon" style="display: inline-block;" target="_blank">
-            Install ioGrow Chrome extension</a>
-            </div>
+    <section class="section-intro" style="opacity: 1;">
+      <div class="content">
+      <h1> ioGrow Privacy Policy </h1>
+        The privacy of your data — and it is your data, not ours! — is a big deal to us. We’ll only ever access your account to help you with a problem or squash a software bug. All your uploaded files will be securely stored on your own Google Drive account, You only can decide who can see and access those documents.
 
-          </div>
-        </div>
+<h1>Identity & access</h1>
+When you sign up for ioGrow, we ask for your name, company name, and email address. That's just so you can personalize your new account, and we can send you invoices, updates, or other essential information. We’ll never sell your personal info to third parties, and we won’t use your name or company in marketing statements without your permission, either.
+
+When you write ioGrow with a question or to ask for help, we'll keep that correspondence, and the email address, for future reference. When you browse our marketing pages, we'll track that for statistical purposes (like conversion rates and to test new designs). We also store any information you volunteer, like surveys, for as long as it makes sense.
+
+The only times we’ll ever share your info:
+<ul>
+<li>To provide products or services you've requested, with your permission.</li>
+<li>To investigate, prevent, or take action regarding illegal activities, suspected fraud, situations involving potential threats to the physical safety of any person, violations of our Terms of Service, or as otherwise required by law.</li>
+<li>If ioGrow is acquired by or merged with another company, we’ll notify you well before any info about you is transferred and becomes subject to a different privacy policy.</li>
+</ul>
+<h1>Law enforcement</h1>
+ioGrow won’t hand your data over to law enforcement unless a court order says we have to. We flat-out reject requests from local and federal law enforcement when they seek data without a court order. And unless we're legally prevented from it, we’ll always inform you when such requests are made.
+
+<h1>Encryption</h1> 
+All data is encrypted via SSL/TLS when transmitted from our servers to your browser. The database backups are also encrypted. Data isn’t encrypted while it's live in our database (since it needs to be ready to send to you when you need it), but we go to great lengths to secure your data at rest — you can read more about that on our security page.
+
+<h1>Deleted data</h1>
+When you cancel your account, we'll ensure that nothing is stored on our servers past 30 days. Anything you delete on your account while it's active will also be purged within 30 days (up until then it's available in the trash can).
+
+<h1>Changes & questions</h1>
+ioGrow may update this policy once in a blue moon — we’ll notify you about significant changes by emailing the account owner or by placing a prominent notice on our site. You can access, change or delete your personal information at any time by contacting support@iogrow.com.
+<p>
+Questions about this privacy policy? Please get in touch at support@iogrow.com and we’ll be happy to answer them!
+</p>
       </div>
     </section>
     <div class="signature-wrapper">
