--- a/templates/new_web_site/security-informations.html
+++ b/templates/new_web_site/security-informations.html
@@ -4,13 +4,14 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-    <meta content="Discover new customer, get organized and grow your business" name="description">
-    <meta content="ioGrow Sign in - Discover new customer, get organized and grow your business" property="og:title">
-    <meta content="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" property="og:image">
-    <meta content="Now, your customers are talking about topics related to your business on social media. We provide you the right tool to discover them." property="og:description">
+    <meta content="With just one click you can automatically add a new lead from LinkedIn to ioGrow. No need to spend time on data entry. Focus on what matters: serving your customers and closing more deals." name="description">
+    <meta content="ioGrow - Security overview" property="og:title">
+    <meta content="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" property="og:image">
+    <meta content="With just one click you can automatically add a new lead from LinkedIn to ioGrow. No need to spend time on data entry. Focus on what matters: serving your customers and closing more deals." property="og:description">
     <title>
-      ioGrow Sign in - Discover new customer, get organized and grow your business
+      ioGrow - Security overview.
     </title>
+    <script src="/static/new_web_site/google_drive_files/google.js">
 </script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel="stylesheet">
     <link href="/static/new_web_site/google_drive_files/site.min.css" rel="stylesheet">
@@ -38,42 +39,56 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     <header class="header" role="banner">
       <div class="header-item with-site-logo">
         <a class="site-logo site-logo-link" data-g-action="Header" data-g-action="Header" data-g-event="Drive"
-        data-g-label="Drive logo">
+        data-g-label="Drive logo" href="/welcome/">
         <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png"></a>
       </div>
       <nav class="nav-site" data-nav-name="mobile">
-        <img alt="Drive logo" src="/static/new_web_site/google_drive_files/logo-drive.png">
-       
+        <img alt="ioGrow logo" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png">
+        <ul>
+          <li>
+            <a class="sign-in" data-g-action="Header" data-g-event="Drive" data-g-label="For Work" href="/sign-in">
+            Sign-in</a>
+          </li>
+          <li class="mobile-is-hidden float-in">
+            <a class="go-to-drive get-started" data-g-action="Header" data-g-event="Drive" data-g-label="Go to ioGrow" href="/sign-in">
+            Go to ioGrow</a>
+          </li>
+          <li class="download-app mobile-is-visible crushed-is-visible">
+            <a class="download-mobile boxed-in get-started" data-g-action="Header" data-g-event="Drive" data-g-label="Sign In" href="/sign-in" style="display: inline-block;">
+            Sign In</a>
+          </li>
+        </ul>
       </nav>
-      
+      <div class="mobile-nav-toggle js-mobilenav">
+        <div class="icon icon-mobile-open toggle-nav-open js-mobilenav-toggle" data-target-nav="mobile"></div>
+        <div class="icon icon-mobile-close toggle-nav-closed js-mobilenav-toggle-close" data-target-nav="mobile"></div>
+      </div>
     </header>
-    <section class="section-intro" style="height: 560px; opacity: 1;">
-      <div class="content" style="margin-left: 309.5px !important;">
-        <div class="column column-left with-example">
-          <img alt="" class="example" src="http://storage.googleapis.com/iogrow-gs/devices.png">
-        </div>
-        <div class="column column-right with-copy">
-          <div class="copy text-left">
-            <h1 class="section-headline heading-headline allow-orphan">
-              Start your free trial
-            </h1>
-            <p>
-              Just fill out the form below and you’re in!
-            </p>
-            
-            <form class="sign-up-form" action="" method="POST">
+    <section class="section-intro" style="opacity: 1;">
+      <div class="content">
+      <h1> ioGrow security overview </h1>
+<h2>We protect your data.</h2>
+All data is written to multiple disks instantly, backed up daily, and stored in multiple locations. Files that our customers upload are stored on their Google Drive infrastructure that use modern techniques to remove bottlenecks and points of failure.
 
-                          <input required autofocus type="text" name="org_name" placeholder="Type here your organization name"  width="150%">
+<h2>Your data is sent using HTTPS.</h2>
+Whenever your data is in transit between you and us, everything is encrypted, and sent using HTTPS. Any files which you upload are stored and are encrypted at rest.
 
-                          <input required autofocus type="text" name="tags" placeholder="Describe your business: #topic1, #topic2" >
+<h2>Full redundancy for all major systems.</h2>
+Our servers — from power supplies to the internet connection to the air purifying systems — operate at full redundancy. Our systems are engineered to stay up even if multiple servers fail.
 
-                          <input id="signIn" name="signIn" class="maia-button button-download download-mobile get-started" type="submit" value="Start my free trial >">
-
-                        </form>
+<h2>Sophisticated physical security.</h2>
+Our state-of-the-art servers are protected by biometric locks and round-the-clock interior and exterior surveillance monitoring. Only authorized personnel have access to the data center. 24/7/365 onsite staff provides additional protection against unauthorized entry and security breaches.
 
 
-          </div>
-        </div>
+<h2>We protect your billing information.</h2>
+When you sign up for a paid account on ioGrow, we do not store any of your card information on our servers. It's handed off to <a href="https://stripe.com/us/terms">Stripe Payment Solutions</a>, a company dedicated to storing your sensitive data on PCI-Compliant servers.
+
+
+<h2>Want to know more?</h2>
+Submit a support request if you have other security questions and we’ll get back to you as quickly as we can.
+
+<h2>Have a concern? Need to report an incident?</h2>
+Have you noticed abuse, misuse, an exploit, or experienced an incident with your account? Please submit a report to support@iogrow.com
       </div>
     </section>
     <div class="signature-wrapper">
