--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -192,13 +192,13 @@ California, 94040,
               <a href="http://blog.iogrow.com/">ioGrow Blog</a>
             </li>
             <li>
-              <a href="#">Terms of service</a>
+              <a href="/terms-of-services/">Terms of service</a>
             </li>
             <li>
-              <a href="#">Privacy policy</a>
+              <a href="/privacy/">Privacy policy</a>
             </li>
             <li>
-              <a href="#">Security information</a>
+              <a href="/security/">Security information</a>
             </li>
           </ul>
         </div>
