--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -224,17 +224,17 @@
           <div class="detailsSection">
              <div class="head">
               <div class="pic">
-                      <a href="/#/discovers/show/<%= tweet.idp %>topic-*<%=tweet.keyword %>" ng-click="details_of_tweets(tweet.idp)"   target="new" class="startup-link" title="account.name">
+                      <a href="/#/discovers/show/<%= tweet.idp %>*" ng-click="details_of_tweets(tweet.idp)"   target="new" class="startup-link" title="account.name">
                 
-                          <img href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.keyword %>" ng-show="tweet.profile_image" ng-click="details_of_tweets(tweet.idp)" target="new" class="img-responsive profile-photo" src="<%=tweet.profile_image %>">
-                          <img href="/#/discovers/show/<%= tweet.idp %>topic-*<%=tweet.keyword %>" ng-show="tweet.profile_image_url" ng-click="details_of_tweets(tweet.id)" target="new" class="img-responsive profile-photo" src="<%=tweet.profile_image_url %>">
+                          <img href="/#/discovers/show/<%= tweet.id %>*" ng-show="tweet.profile_image" ng-click="details_of_tweets(tweet.idp)" target="new" class="img-responsive profile-photo" src="<%=tweet.profile_image %>">
+                          <img href="/#/discovers/show/<%= tweet.idp %>*" ng-show="tweet.profile_image_url" ng-click="details_of_tweets(tweet.id)" target="new" class="img-responsive profile-photo" src="<%=tweet.profile_image_url %>">
                       </a>
               </div>
               <div class="text">
                <!-- <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>-->
                 <div class="name">
 
-                   <a href="/#/discovers/show/<%= tweet.idp %>topic-*<%=tweet.keyword %>" target="new" class="profile-link">
+                   <a href="/#/discovers/show/<%= tweet.idp %>*" target="new" class="profile-link">
                       <%= tweet.screen_name %>
                    </a>
                 </div>
@@ -243,7 +243,7 @@
           </div> 
           <div class="textbody">
               <div class="pitch">
-                <a href="/#/discovers/show/<%= tweet.idp %>topic-<%=tweet.keyword %>" target="new"  >
+                <a href="/#/discovers/show/<%= tweet.idp %>" target="new"  >
                 <p  class="contact-title"> <%=tweet.text%>
                 </p>
               </a>
