show delete invited user only for the admin user
Former-commit-id: 031cfa35daa9b14ff29f987bfabf4f2cb9fbb53d [formerly 5d936250c3a2357b9aa42888e567e802d77ae329] [formerly 48212ae920ae1e4af4bc9ff1c5d59bcba3079627 [formerly 1b66c8a8218ec627234032a6744e4ce81d028689]]
Former-commit-id: 9dea77d3190c1a63900afcf6af221f047c7a116e [formerly 6d4372544574c287bc0e8ee5b81a53b8bcfc9074]
Former-commit-id: bfb001e51ef44fb33c00aa8b153720962f1e5cf4

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -88,7 +88,7 @@
                <i class="fa fa-user"></i><span class="btn-text">  {{ _('Add new user')}}</span>
                  
              </button>
-             <button ng-class="{disabled: selected_users.length==0}" title="Remove user" class="btn btn-sm btn-default task_action" ng-click="reopenTask()" style="/* font-weight: bold; */">
+             <button ng-class="{disabled: selected_users.length==0}" title="Remove user" class="btn btn-sm btn-default task_action" ng-click="deleteUser()" style="/* font-weight: bold; */">
                 -           
               <i class="fa fa-user"></i><span class="btn-text"> {{ _('Remove user')}}</span>
                  
@@ -131,9 +131,13 @@
                     <a href="" ng-click="predicate = 'license_status'; reverse=false"> {{ _('License status')}}</a>
                     
                   </th>
-                  <th>
+                  {% if is_admin %}  
+                  <th >
+
                     <a href="" ng-click="predicate = 'licence'; reverse=false"> {{ _('Administrator')}}</a>
+                    
                   </th>
+                  {% endif %}
                   
                 </tr>
                 </thead>
@@ -144,7 +148,7 @@
                      <input type="checkbox" ng-click="select_user(user,$index,$event)" ng-checked="isSelected()">
                   </td>
                   <td>
-                    <%= user.google_display_name %>
+                    <%= user.google_display_name %> 
                   </td>
                   <td>
                      <%= user.email %>
@@ -152,21 +156,25 @@
                   <td>
                    <%= user.license_status %>
                   </td>
-                  <td  style="padding-left: 44px;">
+                  {% if is_admin %} 
+                  <td  style="padding-left: 44px;" >
                     <input title='{{ _("Select all Users")}}' type="checkbox" ng-checked="user.is_admin" ng-click="setAdmin(user,$index,$event)">
                   </td>
+                  {% endif %}
                 </tr>                
                 </tbody>
                 </table>
               </div>
        </div>
-           <div class="showPage custom-show margin-bottom-15 col-md-12" ng-show="invitees">    
-              <button ng-class="{disabled: selected_invitees.length==0}" title=" Delete invitee " class="btn btn-sm btn-default task_action pull-right" ng-click="deleteInvitedUser()">
+           <div class="showPage custom-show margin-bottom-15 col-md-12" ng-show="invitees">  
+           {% if is_admin %}  
+              <button ng-class="{disabled: selected_invitees.length==0}" title=" Delete invitee " class="btn btn-sm btn-default task_action pull-right" ng-click="deleteInvitedUser()" ng-show="true">
                   <i class="fa fa-trash-o"></i>
                   <span class="btn-text">
                       Delete invitee
                   </span>
               </button>
+            {% endif %}
               <h3>Invitees : </h3>
               <div class="table-responsive">
                     <table class="table">
@@ -177,7 +185,7 @@
 
                       </th>
                       <th>
-                        <a href="" ng-click="predicateInvitees = 'updated_at'; reversein=false"> {{ _('Email')}}</a>
+                        <a href="" ng-click="predicateInvitees = 'updated_at'; reversein=false"> {{ _('Email')}} </a>
                       </th>
                       <th>
                         <a href="" ng-click="predicateInvitees = 'invited_by'; reversein=false"> {{ _('Invited by')}}</a>
@@ -299,7 +307,7 @@
                               <form class="form-inline newLeadForm margin-bottom-10" role="form">
                                   <div class="input-icon">
                                      <i class="fa fa-building"></i>
-                                    <input type="text" class="form-control" ng-model="billing.company_name" placeholder="company name">
+                                    <input type="text" class="form-control" ng-model="billing.company_name" placeholder="company name" >
                                   </div>
                               </form>       
                               <div class="row  margin-bottom-10">
