--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -23,9 +23,9 @@
           <span role="button" class="filterItem" ng-click="runTheProcess();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _('Tweets')}} 
            </span>
           
-          <!--span role="button" class="filterItem"  ng-click="influencers();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span>
+          <span role="button" class="filterItem"  ng-click="influencers_V2();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span>
           
-          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _('On')}}<span class="hidden-xs hiddenOnxs">{{ _('Maps')}}</span> </span-->
+          <!-- <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _('On')}}<span class="hidden-xs hiddenOnxs">{{ _('Maps')}}</span> </span -->
           
           
             <div class="btn-group visibleOnPhone">
@@ -173,17 +173,17 @@
           <div class="detailsSection">
              <div class="head">
               <div class="pic">
-                      <a href="/#/discovers/show/<%= influencer.id %>topic-*<%=influencer.topic %>" ng-click="details_of_tweets(influencer.id)"   target="new" class="startup-link" title="account.name">
+                      <a href="/#/discovers/show/<%= influencer.idp %>*" ng-click="details_of_tweets(influencer.id)"   target="new" class="startup-link" title="account.name">
                 
-                          <img href="/#/discovers/show/<%= influencer.id %>topic-*<%=influencer.topic %>" ng-click="details_of_tweets(influencer.id)" target="new" class="img-responsive profile-photo" src="<%=influencer.profile_image_url %>">
+                          <img href="/#/discovers/show/<%= influencer.idp %>*" ng-click="details_of_tweets(influencer.id)" target="new" class="img-responsive profile-photo" src="<%=influencer.profile_image_url %>">
                       </a>
               </div>
               <div class="text">
                <!-- <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>-->
                 <div class="name">
 
-                   <a href="/#/discovers/show/<%= influencer.id %>topic-*<%=influencer.topic %>" target="new" class="profile-link">
-                      <%= influencer.author_name %>
+                   <a href="/#/discovers/show/<%= influencer.idp %>*" target="new" class="profile-link">
+                      <%= influencer.name %>
                    </a>
                 </div>
                 
@@ -193,7 +193,7 @@
               <div class="pitch">
               Description: 
                 <span class="contact-title">
-                   <%= influencer.author_description %>
+                   <%= influencer.description %>
 
                 </span>
              
@@ -201,7 +201,7 @@
               <div class="pitch">
                 Number of followers: 
                 <span  class="contact-title" >
-                  <%= influencer.author_followers_count%>
+                  <%= influencer.followers_count%>
                 </span>
               </div>
          
@@ -323,7 +323,7 @@
 </div>
 <div class="fixed-labelsCard visible-md visible-lg">
   
-  <div class="row" ng-show="tweetsshow">
+  <div class="row" >
   <div class="col-md-12">
     <div class="portlet showCard fixedCard">
       <div class="portlet-title">
