Limit to 3 keywords (topics) on social discovery by organization fix #1326
Former-commit-id: 03c79ac508d08aa722ba883790785b8291726d8e [formerly 9ad3787003d47191550b9ae8593f65ce77e8ae4a] [formerly 39f21d50e233e2d46ff511eced87987f8c61a583 [formerly e919fa306119ae65963dcaa64242ca9b37939215]]
Former-commit-id: 16f52075cd32d8a06419340a87d50d8fa64789c1 [formerly 5aff1137811455d2016d68a0176a8bd6dfb829ef]
Former-commit-id: 71b331255613756dc88aa3e122c6b352e4b967d9

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -414,6 +414,47 @@
                </div>
           </div>
        </div>
+
+
+<!--  maximum 3 keywords popup -->
+
+
+
+
+
+  <div id="popup_keywords" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+                  <div class="modal-dialog">
+                  <div class="modal-content">
+                        <div class="modal-header">
+                           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                          <h3 id="myModalLabel">{{_("Upgrade:")}}</h3>
+                        </div>
+                <div class="modal-body">
+                            <form id="addOppStage" name="addOppStage"   class="form-horizontal">
+                            <fieldset>
+                            <div class="form-group">
+                <label  class="required control-label">{{_("You are allowed to just 3 keywords, you can upgrade your account for more keywords by ")}} </label>
+                <label  class="required control-label">
+                requesting us yo@iogrow.com</label>
+                            </div>
+                           
+
+                          </fieldset>
+
+                  </div>
+                  <div class="modal-footer">
+                   <button class="btn" data-dismiss="modal" ng-click="hide_maximum_keywords_popup()" aria-hidden="true">{{_("Cancel")}}</button>
+                    
+                   </div>
+                   </form>
+       </div>
+       </div>
+       </div>
+
+
+
+
+
       <!--assign tags model-->
    <div id="assigneeTagsToTask" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
           <div class="modal-dialog">
