adding tags for list show
Former-commit-id: 512956874c1485d0ecb7c91ca5f9f3c0245a8c9e [formerly 47fe0cb2b2d734e0f1b8be2f63b2ccf5f3ceaeac] [formerly 95cd0c5ab1bbdfc248fe9b620f6e79641f764821 [formerly 69f7be8ac295ad9124510c4506f6f8a41c10f123]]
Former-commit-id: 83ec00c1f31782d3154dc4a4bbfb053b4b4db902 [formerly 0c5bd147a8f731adb6104b8fa474c8327197e678]
Former-commit-id: e9ba64cb4640335dc2a031f6440d025a564f6e54

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -264,7 +264,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="account in accounts | orderBy:fltby:reverse" >
+                    <tr ng-repeat="account in accounts | orderBy:fltby:reverse" droppable ng-drop="dropTag(account,$index)" >
                         <td>
                           <input title="Select all Users" type="checkbox" ng-checked="isSelected(account)" ng-click="selectCardwithCheck($event,$index,account)">
                         </td>
@@ -279,6 +279,10 @@
                             <a class="profile-link" href="/#/accounts/show/<%= account.id %>" style="max-width:210px">
                               <span><%= account.name %></span>
                             </a>
+                          </div>
+                          <div class="tagsContainer">
+                             <span ng-repeat="tag in account.tags"  draggable  ng-drag="dragTagItem(tag.edgeKey)" class="pull-right task-label task-tag badge" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
+                             <div class="clearfix"></div>
                           </div>
                         </td>
                         <td>
