fixing bug on account list when selecting all items tags selected also fix #1337
Former-commit-id: 2fba31000de31dd5cedbd40dae781029e547f044 [formerly dcbb61af8aed413a292ccb4379dd159dcf10f029] [formerly 142e3fbd5fc6cfa0cf683331cbcc5400050fa168 [formerly 6dcd7454a4c9cb9590bd045b492deeac233ec886]]
Former-commit-id: 8e694f04755bc81cdaf7cf57130c4f3f75349d15 [formerly 4adb69d1d57baf1741d6f111a0593f88de4deb96]
Former-commit-id: f71c2a56f8f7aa4fd923f93837cc4e595eecac7f

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -266,7 +266,7 @@
                 <tbody>
                     <tr ng-repeat="account in accounts | orderBy:fltby:reverse" droppable ng-drop="dropTag(account,$index)" >
                         <td>
-                          <input title="Select all Users" type="checkbox" ng-checked="isSelected(account)" ng-click="selectCardwithCheck($event,$index,account)">
+                          <input title="Select all Users" type="checkbox" ng-checked="isSelectedCard(account)" ng-click="selectCardwithCheck($event,$index,account)">
                         </td>
                         <td>
                           <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name">
@@ -346,7 +346,7 @@
               </button>
             </div>
         </div>
-          <div ng-repeat="account in accounts"  ng-click="selectCard($event,$index,account)" ng-class="{selectedCard: isSelected(account)}" droppable  id="card_<%=$index%>" class="cardElement" ng-drop="dropTag(account,$index)">
+          <div ng-repeat="account in accounts"  ng-click="selectCard($event,$index,account)" ng-class="{selectedCard: isSelectedCard(account)}" droppable  id="card_<%=$index%>" class="cardElement" ng-drop="dropTag(account,$index)">
            <div class="btn-group inCardOptionsBtn">
             <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
              <i class="fa fa-ellipsis-vertical"></i>
