--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -295,9 +295,15 @@
                         <td>
                           <%=fromNow(account.updated_at)%>
                         </td>
-                    </tr>
+                    </tr>                    
                 </tbody>
                 </table>
+                <div class="loaderCard" ng-show="isMoreItemLoading">
+                      <div class="loaderCardContent">
+                         <img class="img-responsive " src="/static/img/gloader.gif">
+                         <span> {{ _('Loading...')}}</span>
+                      </div>
+                 </div>
             </div>
         </div>
         <div class="col-md-12 waterfall" ng-hide="blankStateaccount" ng-show="show=='cards'" ng-click="unselectAll($event)" stop-event='click'>
